# CuMesh

./: pyproject.toml  setup.py
.github/workflows/: main.yml
cumesh/: cumesh.py
src/: atlas.cu  clean_up.cu  connectivity.cu  ext.cpp  geometry.cu
